# rust-vulkan-test

./: Cargo.toml  README.md  build.rs  build.sh
blender/: obj_export.txt
src/: main.rs
