[package]
name = "vulcan-test"
version = "0.1.0"
authors = ["Cooper EdenDay <cooperedenday@protonmail.com>"]
build = "build.rs"

[dependencies]
vulkano = "*"
vulkano-win = "*"
cgmath = "*"
image = "*"
winit = "*"
time = "*"
toml = "*"

[build-dependencies]
vk-sys = "*"
vulkano-shaders = "*"

[profile.release]
lto = true
