[package]
name = "vulcan-test"
version = "0.1.1"
authors = ["user6553591"]
build = "build.rs"

[dependencies]
vulkano = "*"
vulkano-win = "*"
cgmath = "*"
image = "*"
winit = "*"
time = "*"
toml = "*"
obj-rs = "*"

[build-dependencies]
vk-sys = "*"
vulkano-shaders = "*"

[profile.release]
lto = true
