[package]
name = "vulcan-test"
version = "0.1.6"
authors = ["user6553591 <https://www.reddit.com/message/compose/?to=user6553591>"]
build = "build.rs"

[dependencies]
vulkano = "^0.3.1"
vulkano-win = "^0.3.1"
cgmath = "^0.12.0"
image = "^0.10.4"
winit = "^0.5.6"
time = "^0.1.35"
toml = "^0.2.1"
obj-rs = "^0.4.16"

[build-dependencies]
vk-sys = "^0.2.1"
vulkano-shaders = "^0.3.1"

[profile.release]
lto = true
